--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2582,107 +2582,107 @@ stories:
   domain: http://www.poststar.com/
   link: https://poststar.com/news/world/warship-shows-japan-s-determination-to-expand-military-role/image_6c7500cd-82f3-511c-80e8-129b9fc26a32.html
 images:
-- name: subway-subway-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-storm.jpg
-- name: liberty-back-statue-liberty-back-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-electricity.jpg
-- name: berlinwall-DSC-0084-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-clean-view.jpg
-- name: abandonedbuildings_clean_view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_clean_view.jpg
-- name: adam-smith-adam-smith-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
-- name: oldcabin-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-bright-sand.jpg
-- name: oldcabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
-- name: rockingchair-rockingchair-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-asteroids.jpg
-- name: eduardo-eduardo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-green-zuma.jpg
-- name: oldhouse-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: capital-battle-capitolbattle-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-alien-goggles.jpg
+- name: beach-rocks-beach-rocks-currents-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-hot-spicy.jpg
+- name: server-cloud-server-racks-door-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
+- name: stories-schoolhouse-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-schoolhouse-clouds-dark-dali.jpg
 - name: oldhotel-oldhotel-clean-view.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-clean-view.jpg
-- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
-- name: amusement-park-amusement-park-2-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crafty-painting.jpg
-- name: bordercrossing-bordercrossing-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-rain.jpg
-- name: server-cloud-server-racks-door-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
-- name: birdhouse-birdhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-really-hot.jpg
-- name: beach-rocks-beach-rocks-currents-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dry-skin.jpg
-- name: crow_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_color.jpg
-- name: oldbarn-oldbarn-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-aqua.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
-- name: blossombar-yellow-collage-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
-- name: mistywoods-babyfoot-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smooth-ride.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-free-woman.jpg
-- name: adam-smith-adam-smith-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-smooth-ride.jpg
-- name: san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-- name: mosaic-face-mosaic-face-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-attack-planes.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
-- name: oldcabin-oldcabin-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-far-away.jpg
-- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
-- name: school-clouds-church-clouds-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-storm.jpg
-- name: trucksilo-trucksilo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-far-away.jpg
-- name: liberty-back-statue-liberty-back-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
-- name: downtown-trucksilo-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-asteroids.jpg
-- name: cargo-ship-cargo-ship-on-sea-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-aqua.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-3.jpg
-- name: oldhousecars-house-old-cars-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smooth-ride.jpg
-- name: yosemite-yosemite-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
-- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
-- name: downtown-trucksilo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crabapple.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-4.jpg
-- name: ellis-island-ellis-island-room-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-granite.jpg
-- name: nazi-invasion-DSC_0020.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
-- name: machine-road-machine-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-cinnamon-rolls.jpg
-- name: christianity-christianity-under-construction-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
-- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
-- name: sand-hand-sand-hand-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-purple-pond.jpg
-- name: blossombar-neo-instinct-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-00-00.jpg
-- name: curtain-curtain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
+- name: old-cabin-oldcabin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-storm.jpg
+- name: berlinwall2-berlinwall-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-granite.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
+- name: nyc-flag-api-conversations-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-aqua.jpg
+- name: death-valley-death-valley-national-park-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dali-two.jpg
+- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+- name: downtheline-downtheline-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-ww2-color.jpg
+- name: border-crossing-bordercrossing-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-dresden.png
+- name: christianity-christianity-under-construction-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-really-hot.jpg
+- name: yosemite-yosemite-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kand-two.jpg
+- name: ellis-island-ellisisland-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-bright-sand.jpg
+- name: old-door-lock-old-door-lock-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-deep-connections.jpg
+- name: beach-rocks-beach-rocks-currents-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-light-dali.jpg
+- name: udnie-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2971.jpg
+- name: power-lines-power-lines-empty-space-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
+- name: crow-crow-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alberto-giacometti.jpg
+- name: fence-mexico-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kandinsky-bv.jpg
+- name: bluelake-colorful-dream-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-38-67.jpg
+- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
+- name: gypsy-wagon-gypsywagon-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-deep-connections.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: victoria-victoria-corner-hotel-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-aqua.jpg
+- name: power-lines-power-lines-empty-space-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-electricity.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: catacombs-catacombs-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
+- name: oldcabin-oldcabin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-storm.jpg
+- name: oldbarn-oldbarn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
+- name: trucksilo-trucksilo-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-umberto-bocc.jpg
+- name: oldbarn-oldbarn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-space-pizza.jpg
+- name: old-school-house-old-schoolhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-post-modern.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: adam-smith-adam-smith-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
+- name: beach-rocks-beach-rocks-currents-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-pablo-blue.jpg
+- name: stories-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: oldhousecars-house-old-cars-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-spagetti-accident.jpg
+- name: gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
+- name: bluelake-gred-mash-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-38-67.jpg
+- name: hollywood-building-hollywood-building-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-storm.jpg
+- name: amusement-park-amusement-park-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
+- name: oldroad-old-road-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-circuit.jpg
+- name: wreck-IMG_6965.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6965.jpg
+- name: old-granary-field-granaryfield-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-three.jpg
+- name: oldhousecars-house-old-cars-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-satan-red.jpg
+- name: old-house-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-color.jpg
+- name: server-cloud-server-racks-door-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purple-pond.jpg
+- name: razorwire-DSC-0080-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-dali.jpg
 ---
 Susie Wokoma Joins The Enola Holmes Mysteries.&nbsp;Halfway Home, Twins In The Drivers Seat.&nbsp;Essentia Health Hours For Fourth Of July.&nbsp;Hallsville July Fourth Event To Benefit Family Of Longview Pastor Who Died.&nbsp;College President Praises Enrollment Efforts.&nbsp;Bonds Sold, Schools Recognized, And Griffith Stadium Update.&nbsp;Britney Spears Reveals Diet Tips For Ailments And Weight Loss.&nbsp;Albania's Ruling Socialists Win Local Polls Overwhelmingly.&nbsp;
